--- a/web_apache-mysql-php5.4/Dockerfile
+++ b/web_apache-mysql-php5.4/Dockerfile
@@ -11,7 +11,7 @@ RUN echo 'deb [check-valid-until=no] http://mirrors.cloud.tencent.com/debian-arc
 	&& echo 'deb-src [check-valid-until=no] http://mirrors.cloud.tencent.com/debian-archive/debian/ stretch main non-free contrib' >> /etc/apt/sources.list \
 	&& a2enmod rewrite \
 	&& apt-get update -y \
-	&& apt-get install --force-yes -y binutils mariadb-server \
+	&& apt-get install --force-yes -y binutils mariadb-server mariadb-client \
 	&& docker-php-ext-install mysqli pdo_mysql
 
 RUN	cp /usr/src/php/php.ini-production /usr/local/etc/php/php.ini \
