--- a/web_apache-mysql-php7.3/Dockerfile
+++ b/web_apache-mysql-php7.3/Dockerfile
@@ -11,8 +11,8 @@ RUN sed -i "s@http://deb.debian.org@http://mirrors.aliyun.com@g" /etc/apt/source
 	&& a2enmod rewrite \
 	&& apt-get update -y \
 	&& apt-get install -y libzip-dev libpng-dev libwebp-dev libjpeg-dev libfreetype-dev \
-	&& apt-get install -y default-mysql-client default-mysql-server \
-	&& docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
+	&& apt-get install -y mariadb-server mariadb-client \
+	&& docker-php-ext-configure gd --with-freetype-dir --with-jpeg-dir --with-webp-dir \
 	&& docker-php-ext-install mysqli pdo_mysql zip gd
 
 RUN cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini \
