--- a/web_apache-mysql-php5.4/Dockerfile
+++ b/web_apache-mysql-php5.4/Dockerfile
@@ -2,9 +2,10 @@ FROM php:5.4-apache
 
 LABEL Organization="Rml" Author="dr0n1 <dr0n6666x@gmail.com>"
 
-COPY start.sh /start.sh
-COPY src /var/www/html/
+COPY config/start.sh /start.sh
+COPY config/php.ini /usr/local/etc/php/php.ini
 COPY data/data.sql /tmp/
+COPY src /var/www/html/
 
 
 RUN echo 'deb [check-valid-until=no] http://mirrors.cloud.tencent.com/debian-archive/debian/ stretch main non-free contrib' > /etc/apt/sources.list \
@@ -14,8 +15,7 @@ RUN echo 'deb [check-valid-until=no] http://mirrors.cloud.tencent.com/debian-arc
 	&& apt-get install --force-yes -y binutils mariadb-server mariadb-client \
 	&& docker-php-ext-install mysqli pdo_mysql
 
-RUN cp /usr/src/php/php.ini-production /usr/local/etc/php/php.ini \
-	&& sh -c 'mysqld_safe &' \
+RUN sh -c 'mysqld_safe &' \
 	&& sleep 3s \
 	&& mysqladmin -uroot password 'root' \
 	&& chmod +x /start.sh \
