--- a/web_apache-php7.3/Dockerfile
+++ b/web_apache-php7.3/Dockerfile
@@ -2,12 +2,12 @@ FROM php:7.3-apache
 
 LABEL Organization="Rml" Author="dr0n1 <dr0n6666x@gmail.com>"
 
-COPY start.sh /start.sh
-COPY src/ /var/www/html/
+COPY config/start.sh /start.sh
+COPY config/php.ini /usr/local/etc/php/php.ini
+COPY src /var/www/html/
 
 RUN a2enmod rewrite \
 	&& chmod +x /start.sh \
-	&& cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini \
 	&& chown -R www-data:www-data /var/www/html
 
 CMD ["/start.sh"]
