--- a/web_apache-mysql-php7.3/Dockerfile
+++ b/web_apache-mysql-php7.3/Dockerfile
@@ -11,10 +11,9 @@ COPY src /var/www/html/
 RUN sed -i "s@http://deb.debian.org@http://mirrors.aliyun.com@g" /etc/apt/sources.list \
 	&& a2enmod rewrite \
 	&& apt-get update -y \
-	&& apt-get install -y libzip-dev libpng-dev libwebp-dev libjpeg-dev libfreetype-dev \
+	&& apt-get install -y libzip-dev libwebp-dev libgd-dev \
 	&& apt-get install -y mariadb-server mariadb-client \
-	&& docker-php-ext-configure gd --with-freetype-dir --with-jpeg-dir --with-webp-dir \
-	&& docker-php-ext-install mysqli pdo_mysql zip gd
+	&& docker-php-ext-install mysqli pdo_mysql zip gd exif
 
 RUN sh -c 'mysqld_safe &' \
 	&& sleep 3s \
