--- a/web_apache-mysql-php5.4/Dockerfile
+++ b/web_apache-mysql-php5.4/Dockerfile
@@ -12,9 +12,10 @@ RUN echo 'deb [check-valid-until=no] http://mirrors.cloud.tencent.com/debian-arc
 	&& echo 'deb-src [check-valid-until=no] http://mirrors.cloud.tencent.com/debian-archive/debian/ stretch main non-free contrib' >> /etc/apt/sources.list \
 	&& a2enmod rewrite \
 	&& apt-get update -y \
-	&& apt-get install --force-yes -y libzip-dev libwebp-dev libgd-dev \
+	&& apt-get install --force-yes -y libzip-dev libwebp-dev libgd-dev libpng-dev libjpeg-dev \
 	&& apt-get install --force-yes -y binutils mariadb-server mariadb-client \
-	&& docker-php-ext-install mysqli pdo_mysql zip gd exif
+	&& docker-php-ext-configure gd --with-freetype-dir --with-jpeg-dir --with-webp-dir \
+	&& docker-php-ext-install mysqli pdo_mysql zip gd exif gettext
 
 RUN sh -c 'mysqld_safe &' \
 	&& sleep 3s \
