--- a/misc_python3.9/Dockerfile
+++ b/misc_python3.9/Dockerfile
@@ -2,10 +2,10 @@ FROM httpd:2.4.54
 
 LABEL Organization="Rml" Author="dr0n1 <dr0n6666x@gmail.com>"
 
-COPY files /usr/local/apache2/htdocs/
+COPY files /tmp/
 COPY start.sh /start.sh
 
-WORKDIR /usr/local/apache2/htdocs/
+WORKDIR /tmp
 
 RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list \
 	&& apt update \
