--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
           rm -rf release
           mkdir -p release
           for dir in */ ; do
-            # 只处理非隐藏目录
-            if [[ -d "$dir" && "${dir:0:1}" != "." ]]; then
+            # 只处理非隐藏目录，且排除 release/ 目录自身
+            if [[ -d "$dir" && "${dir:0:1}" != "." && "${dir%/}" != "release" ]]; then
               name="${dir%/}"
               echo "→ Zipping folder: $name"
               zip -rq "release/${name}.zip" "$dir"
